vlib/v/checker/tests/incorrect_name_fn_type.out
vlib/v/checker/tests/incorrect_name_fn_type.vv:1:1: error: fn type `callback` must begin with capital letter
    1 | type callback = fn ()
      | ~~~~~~~~~~~~~
